# potential-robot

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
catkin_ws/devel/lib/pkgconfig/: robot_controller.pc  robot_project_pkg.pc  roboticsgroup_gazebo_plugins.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_manipulation_bringup.pc  turtlebot3_manipulation_description.pc  turtlebot3_manipulation_gazebo.pc  turtlebot3_manipulation_gui.pc  turtlebot3_manipulation_moveit_config.pc  turtlebot3_manipulation_navigation.pc  turtlebot3_manipulation_slam.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
catkin_ws/devel/lib/robot_project_pkg/: Broadcaster  Mapviewer  ObstacleVisualizer  auto  robotTest  robot_controller  testRob  velocityPublisher
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_marker_server  turtlebot3_obstacle
catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
catkin_ws/src/robot_project_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/robot_project_pkg/code/: Map_viewer.cpp  ObstacleVisualizer.cpp  auto.cpp
catkin_ws/src/robot_project_pkg/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  view1.rviz
catkin_ws/src/robot_project_pkg/launch/: robot.launch
catkin_ws/src/robot_project_pkg/urdf/: robot.urdf  robot.urdf.xacro  robot_core.xacro
catkin_ws/src/robot_project_pkg/worlds/: cappero_laser_odom_diag_obstacle_2020-05-06-16-26-03.world  pasticceria.world
(+27 files in other folders)
